[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "deepprecs"
authors = [
    {name = "Matteo Ravasi", email = "matteo.ravasi@kaust.edu.sa"},
]
description = "Deep Preconditioned Inverse problems."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["inverse problems", "seismic"]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
	"cupy-cuda113",
	"torchsummary",
    "pytorch-msssim",
    "pytorch-lightning",
    "setuptools_scm",
    ]

dynamic = ["version"]

[tool.setuptools.packages]
find = {}